--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,8 +1,383 @@
+<!doctype html>
+
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Home</title>
+
+</head>
+<body>
+
+<div class="container-fluid fixed-top">
+    <nav class="navbar navbar-light" style="background-color: #ffffff; height: 115px">
+        <figure id="logo" class="navbar-brand" style="margin-left: 150px">
+            <a href="#">
+                <img src="https://coinvn247.com/wp-content/uploads/2019/01/codegym.png" alt="HomeCodeGym"
+                     class="img-responsive" width="160px" height="100px"></a>
+        </figure>
+        <ul class="nav nav-pills">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle btn btn-outline-success" data-toggle="dropdown" href="#"
+                   role="button" aria-haspopup="true" aria-expanded="false">Dành cho chủ nhà</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                   aria-expanded="false">Ngôn ngữ</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#one">VI</a>
+                    <a class="dropdown-item" href="#two">EN</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                   aria-expanded="false">Đăng Nhập </a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                   aria-expanded="false">Đăng ký</a>
+            </li>
+        </ul>
+    </nav>
+</div>
+<div id="details" class="container-fluid">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100"
+                     src="https://cdn.luxstay.com/rooms/12043/large/1518430184_Phong_kh%C3%A1ch_(Toan_canh).jpg"
+                     alt="First slide" style="height: 800px; width: 300px">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://cdn.luxstay.com/rooms/15176/large/1537408618_IMG_7906.jpg"
+                     alt="Second slide" style="height: 800px; width: 300px">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100"
+                     src="https://cdn.luxstay.com/rooms/14436/large/1534908497_image_6483441%20(11).JPG"
+                     alt="Third slide" style="height: 800px; width: 300px">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+
+<h5 class="text-uppercase font-weight-bold" style="margin-left: 350px; margin-top: 30px; margin-bottom: 30px">Lựa chọn
+    tốt
+    nhất </h5>
+<div class="container">
+    <div class="row">
+        <div class="col-3">
+
+            <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
+                              src="https://www.luxstay.com/blog/wp-content/uploads/2019/01/homestay-nha-trang-s-house-300x200.jpg">
+                <div class="DestinationsTxt">
+                    <h3>Thanh Hóa </h3>
+                </div>
+            </a>
+            <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
+                              src="https://cdn.luxstay.com/home/location/small/location_8_1546584483.png">
+                <div class="DestinationsTxt">
+                    <h3>Huế </h3>
+                </div>
+            </a>
+
+        </div>
+        <div class="col-3">
+
+            <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
+                              src="https://cdn.luxstay.com/rooms/12550/thumbnail/1526052146_123059696.jpg?w=200&h=133&fit=crop&v=147661">
+                <div class="DestinationsTxt">
+                    <h3>SaPa </h3>
+                </div>
+            </a>
+            <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
+                              src="https://cdn.luxstay.com/home/location/small/location_8_1546584483.png">
+                <div class="DestinationsTxt">
+                    <h3>Vũng Tàu </h3>
+                </div>
+            </a>
+
+        </div>
+        <div class="col-3">
+
+            <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
+                              src="https://cdn.luxstay.com/home/location/small/location_4_1546584448.png">
+                <div class="DestinationsTxt">
+                    <h3>Khánh Hòa </h3>
+                </div>
+            </a>
+            <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
+                              src="https://cdn.luxstay.com/rooms/13123/thumbnail/1529484407_29432654_962240693931410_2551760754839650304_n.jpg?w=200&h=133&fit=crop&v=147661">
+                <div class="DestinationsTxt">
+                    <h3>Nha Trang </h3>
+                </div>
+            </a>
+
+        </div>
+        <div class="col-3">
+
+            <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
+                              src="https://cdn.luxstay.com/home/location/small/location_8_1546584483.png">
+                <div class="DestinationsTxt">
+                    <h3>Đà Lạt </h3>
+                </div>
+            </a>
+            <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
+                              src="https://cdn.luxstay.com/home/location/small/location_7_1546584476.png">
+                <div class="DestinationsTxt">
+                    <h3>Hải Phòng</h3>
+                </div>
+            </a>
+
+        </div>
+
+    </div>
+</div>
+<br>
+<h5 class="text-uppercase font-weight-bold" style="margin-left: 350px; margin-top: 30px; margin-bottom: 30px">Gợi ý từ
+    HomeCodeGym</h5>
+<div class="container" style="margin-bottom: 25px">
+    <div class="row">
+        <div class="col-3">
+            <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu" class=" lazyloaded"
+                              src="https://cdn.luxstay.com/home/location/small/location_7_1546584476.png">
+
+                <p>Chung cư - Khánh Hòa, Vietnam</p>
+                <h3>Alibi's Tropical Room</h3>
+                <div class="price"> 877,800 ₫/đêm</div>
+                <div class="evaluate">
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                </div>
+            </a>
+        </div>
+        <div class="col-3">
+            <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
+                              src="https://cdn.luxstay.com/home/location/small/location_6_1546584469.png">
+
+                <p>Chung cư - Khánh Hòa, Vietnam</p>
+                <h3>Alibi's Tropical Room</h3>
+                <div class="price"> 877,800 ₫/đêm</div>
+                <div class="evaluate">
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                </div>
+            </a>
+        </div>
+        <div class="col-3">
+            <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
+                              src="https://cdn.luxstay.com/rooms/11930/thumbnail/1515401896_DSC_0516.jpg?w=200&h=133&fit=crop&v=147661">
+
+                <p>Chung cư - Khánh Hòa, Vietnam</p>
+                <h3>Alibi's Tropical Room</h3>
+                <div class="price"> 877,800 ₫/đêm</div>
+                <div class="evaluate">
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                </div>
+            </a>
+        </div>
+        <div class="col-3">
+            <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
+                              src="https://cdn.luxstay.com/rooms/14218/large/1534423224_41606518-520A-4897-9B90-5471960DEF8C.jpg">
+
+                <p>Chung cư - Khánh Hòa, Vietnam</p>
+                <h3>Alibi's Tropical Room</h3>
+                <div class="price"> 877,800 ₫/đêm</div>
+                <div class="evaluate">
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                    <i class="iconlux-star--gray"></i>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
+<div class="container-fluid">
+    <nav id="footers" class="navbar navbar-light" style="background-color: #fcfbf7">
+
+        <div class="row">
+            <div class="col-4">
+                <div class="advantages-thumb"><img class=" lazyloaded"
+                                                   data-src="https://cdn.luxstay.com/home/talk/talk_11072018100744.png"
+                                                   src="https://cdn.luxstay.com/home/talk/talk_11072018100744.png">
+                </div>
+                <div class="advantages-txt"><h3>Lần đầu tiên tại Việt Nam</h3>
+                    <p>Ứng dụng cho thuê chỗ ở chuyên nghiệp, đặt phòng tin cậy cho HomeCodeGym cao cấp, căn hộ dịch vụ
+                        và
+                        biệt thự nghỉ dưỡng.</p></div>
+
+            </div>
+            <div class="col-4">
+                <div class="advantages-thumb"><img class=" lazyloaded"
+                                                   data-src="https://cdn.luxstay.com/home/talk/talk_5_1543569870.png"
+                                                   src="https://cdn.luxstay.com/home/talk/talk_5_1543569870.png"></div>
+                <div class="advantages-txt"><h3>Sống như người bản địa</h3>
+                    <p>Trải nghiệm không gian bản địa để chuyến du lịch có nhiều màu sắc. Chúng tôi mang đến những trải
+                        nghiệm hoàn toàn mới nhưng vẫn đảm bảo sự tiện lợi và riêng tư tuyệt đối.</p></div>
+
+            </div>
+            <div class="col-4">
+                <div class="advantages-thumb"><img class=" lazyloaded"
+                                                   data-src="https://cdn.luxstay.com/home/talk/talk_11072018100842.png"
+                                                   src="https://cdn.luxstay.com/home/talk/talk_11072018100842.png">
+                </div>
+                <div class="advantages-txt"><h3>Mỗi căn hộ một cá tính riêng</h3>
+                    <p>Từ những căn hộ hiện đại, biệt thự biệt lập cho đến những ngôi nhà truyền thống, chúng tôi không
+                        ngừng mở rộng danh sách để đem đến sự lựa chọn đa dạng cho khách hàng.</p></div>
+
+            </div>
+
+        </div>
+    </nav>
+</div>
+
+<div>
+    <!-- Footer -->
+    <footer class="page-footer font-small unique-color-dark">
+
+        <div style="background-color: #6351ce;">
+            <div class="container">
+
+                <div class="row d-flex align-items-center">
+                    <!-- Grid column -->
+                    <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+                        <h5 class="mb-0">Theo dõi chúng tôi !</h5>
+                    </div>
+                    <!-- Grid row-->
+                    <div class="d-flex flex-row-reverse" style="margin-top: 5px">
+                        <!-- Grid column -->
+                        <ul class="footerNavLinks">
+                            <a href="#!"><img
+                                    src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-facebook.png"
+                                    alt="Facebook"></a>
+                            <a href="#!"><img
+                                    src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-youtube.png"
+                                    alt="Youtube"></a>
+                            <a href="#!"><img
+                                    src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-telegram.png"
+                                    alt="Telegram"></a>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- Grid column -->
+        </div>
 
 
-<ul *ngFor="let house of houses">
-    <li>{{house.title}}</li>
-    <li>{{house.content}}</li>
-    <li>{{house.description}}</li>
-</ul>
+        <!-- Footer Links -->
+        <div class="container text-center text-md-left mt-5">
 
+
+            <!-- Grid row -->
+            <div class="row mt-3">
+
+                <div class="section col-md-4">
+                    <a class="td-header-logo td-sticky-disable" href="https://coinvn247.com/">
+                        <img class="td-retina-data"
+
+                             src="https://coinvn247.com/wp-content/uploads/2019/01/homecodegum.png" height="150px"
+                             width="265px" alt="">
+                    </a>
+                </div>
+
+                <!-- Grid column -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+                    <!-- Links -->
+                    <h6 class="text-uppercase font-weight-bold">Hỗ trợ</h6>
+                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <a href="#!">Câu hỏi thường </a>
+                    </p>
+                    <p>
+                        <a href="#!">Chính sách hủy</a>
+                    </p>
+                    <p>
+                        <a href="#!">Hướng dẫn đặt phòng</a>
+                    </p>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+
+                    <!-- Links -->
+                    <h6 class="text-uppercase font-weight-bold">Cẩm nang du lịch </h6>
+                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <a href="#!">Đà Lạt </a>
+                    </p>
+                    <p>
+                        <a href="#!">Đà Nẵng </a>
+                    </p>
+                    <p>
+                        <a href="#!">SaPa </a>
+                    </p>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+                    <!-- Links -->
+                    <h6 class="text-uppercase font-weight-bold">Contact</h6>
+                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <i class="fas fa-home mr-3"></i> CodeGym, My Dinh, Ha Noi </p>
+                    <p>
+                        <i class="fas fa-envelope mr-3"></i> codegym@gmail.com</p>
+                    <p>
+                        <i class="fas fa-phone mr-3"></i> + 08 234 567 88</p>
+                    <p>
+                        <i class="fas fa-print mr-3"></i> + 08 234 567 89</p>
+
+                </div>
+
+                <!-- Grid column -->
+
+            </div>
+            <!-- Grid row -->
+
+        </div>
+        <!-- Footer Links -->
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2019 Copyright:
+            <a href="#!">Bản quyền thuộc về Team CC </a>
+        </div>
+        <!-- Copyright -->
+
+    </footer>
+    <!-- Footer -->
+</div>
+
+</body>
+</html>
