--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -287,7 +287,7 @@
                 </div>
             </div>
             <!-- Grid column -->
-        </div>
+        </div>git
 
 
         <!-- Footer Links -->
