--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<!--<app-customer></app-customer>-->
+<app-customer></app-customer>
 
-<app-view-detail></app-view-detail>
+<!--<app-view-detail></app-view-detail>-->
