--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-booking-home></app-booking-home>
 <!--<app-customer></app-customer>-->
 
-<app-view-detail></app-view-detail>
+<!--<app-view-detail></app-view-detail>-->
