--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -156,7 +156,7 @@
             <img style="width: 100%" alt="Điểm đến hàng đầu" class=" lazyloaded"
                  src="http://127.0.0.1:8000/storage/{{house.image}}">
             <a [routerLink]="['/house', house.id]"><h3>{{house.title}}</h3></a>
-            <div class="price">{{house.price}}</div>
+            <div class="price">{{house.price + ' VND'}}</div>
 
         </div>
     </div>
