--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -100,187 +100,32 @@
     <div class="row">
         <div class="col-8">
 
-            <div class="card border-danger col" style="margin-bottom: 20px; margin-top: 20px">
-                <div class="card-header">Điểm nổi bật của chỗ ở</div>
-                <div class="card-body">
-                    <p class="card-text">- Căn hộ được trang trí đẹp mắt với rất nhiều đồ gốm do các nghệ nhân Việt Nam
-                        làm nên căn hộ mang phong cách độc đáo. Điểm nổi bật là kiến ​​trúc và thiết kế của nhà Đông
-                        Dương khiến cho bạn có những kỷ niệm khó quên ở Hà Nội. Bản thân ngôi nhà được sở hữu và thiết
-                        kế bởi một kiến ​​trúc sư tài năng nên mọi thứ đều được suy nghĩ kỹ lưỡng.
-
-                        - Siêu kinh nghiệm sống như một người Hà Nội thực sự trong một con hẻm ngay tại trung tâm thành
-                        phố. Bạn cũng có cơ hội khám phá cuộc sống hàng ngày của người dân địa phương trong hẻm với một
-                        số cửa hàng thực phẩm địa phương, đó là một trải nghiệm thú vị cho bất kỳ người nước ngoài nào.
-
-                        - Ngôi nhà ấm cúng và đầy đủ tiện nghi với truyền hình cáp, máy lạnh, Wifi làm việc, 2 giường.
-                        Các tiện nghi khác bao gồm phòng tắm riêng, phòng khách và khu vực nhà bếp.
-
-                        - Ngôi nhà có nhiều ánh sáng và thiên nhiên tươi sáng, là nơi tuyệt vời để thư giãn, thưởng thức
-                        một tách trà và quan sát cuộc sống hàng ngày của người dân địa phương.
-
-                        Chúng tôi giữ mọi thứ tốt đẹp và sạch sẽ, vì vậy bạn cảm thấy nơi này đáng yêu như là ngôi nhà
-                        của riêng bạn ở Hà Nội.</p>
-                </div>
-            </div>
+            <h3 style="text-align: center; font-size: 38px">{{house.title}}</h3>
 
             <h4> Giới thiệu chỗ ở </h4>
-            <p class="card-text">
-
-                Không gian
-
-                - Căn hộ được trang trí đẹp mắt với rất nhiều đồ gốm do các nghệ nhân Việt Nam làm nên căn hộ mang phong
-                cách độc đáo. Điểm nổi bật là kiến ​​trúc và thiết kế của nhà Đông Dương khiến cho bạn có những kỷ niệm
-                khó quên ở Hà Nội. Bản thân ngôi nhà được sở hữu và thiết kế bởi một kiến ​​trúc sư tài năng nên mọi thứ
-                đều được suy nghĩ kỹ lưỡng.
-
-                - Kinh nghiệm sống như một người Hà Nội thực sự trong một con hẻm ngay tại trung tâm thành phố. Bạn cũng
-                có cơ hội khám phá cuộc sống hàng ngày của người dân địa phương trong hẻm với một số cửa hàng thực phẩm
-                địa phương, đó là một trải nghiệm thú vị cho bất kỳ người nước ngoài nào.
-
-                - Ngôi nhà ấm cúng và đầy đủ tiện nghi với truyền hình cáp, máy lạnh, Wifi làm việc, 2 giường. Các tiện
-                nghi khác bao gồm phòng tắm riêng, phòng khách và khu vực nhà bếp.
-
-                - Ngôi nhà có nhiều ánh sáng và thiên nhiên tươi sáng, là nơi tuyệt vời để thư giãn, thưởng thức một
-                tách trà và quan sát cuộc sống hàng ngày của người dân địa phương.
-
-                Chúng tôi giữ mọi thứ tốt đẹp và sạch sẽ, vì vậy bạn cảm thấy nơi này đáng yêu như là ngôi nhà của riêng
-                bạn ở Hà Nội.
-
-
-                Quyền truy cập của khách
-
-                Chúng tôi muốn chia sẻ sự hiếu khách của chúng tôi với bạn, vì vậy tất cả mọi thứ trong căn hộ bạn đều
-                có thể sử dụng
-
-                Do vị trí trung tâm, và nhiều xe buýt phục vụ khu vực, đây là một nơi tuyệt vời để ở lại nếu bạn muốn
-                ghé thăm tất cả các điểm tham quan tốt nhất tại Hà Nội.
-
-
-                Tương tác với khách
-
-                Chúng tôi yêu thích lưu trữ và giúp khách hàng của chúng tôi tận dụng tối đa thời gian của họ ở Hà Nội.
-                Tôi sẵn lòng đưa ra lời khuyên trong các tour du lịch, đón tại sân bay, các điểm tốt xung quanh thị trấn
-                và các tỉnh lân cận nơi không có hướng dẫn viên nào có thể cung cấp cho bạn khi tôi được sinh ra và lớn
-                lên trong khu phố cổ. Khách cũng rất hoan nghênh liên hệ với chúng tôi qua Luxstay, qua email hoặc điện
-                thoại trước khi lưu trú hoặc trong thời gian lưu trú của mình. Chúng tôi luôn ở đây để giúp đỡ không có
-                vấn đề gì.
-
-
-                Chúng tôi không phục vụ các bữa ăn nhưng có cà phê và trà địa phương.
-
-
-                Những thứ khác cần lưu ý
-
-                - Kích thước giường ngủ:
-
-                2 giường đôi: 1,6 m x 2 m
-
-                - Xin vui lòng TẮT tất cả các thiết bị điện không sử dụng khi bạn rời khỏi nhà
-
-                (ngay cả trong thời gian của bạn) để tránh lạm dụng điện như welll như để tiết kiệm năng lượng và
-
-                bảo vệ môi trường.
-
-                - Bạn sẽ nhận được:
-
-                + Chìa khóa phòng của bạn
-
-                + Thẻ thông minh để sử dụng điều hòa không khí.
-
-                + Giấy vệ sinh phụ, khăn giấy, vv .. có sẵn theo yêu cầu, vui lòng cho chúng tôi biết.
-
-                Chúng tôi cũng cung cấp dịch vụ đón khách thuận tiện từ / đến sân bay với mức giá hợp lý. Chỉ cần gửi
-                cho chúng tôi số chuyến bay của bạn, thời gian hạ cánh
+            <p>
+                {{house.content}}
             </p>
-
             <div class="interest-about" id="section04">
-                <div class="tlt pb10"><h2>Tiện nghi</h2></div>
-                <div class="interest-tbl-fl">
-                    <table class="table-responsive">
-                        <tbody>
-                        <tr>
-                            <th>Phòng ngủ</th>
-                            <td>
-                                <ul>
-                                    <li class="item_amine_bedrooms"><i class="iconroom-people"></i>Tối đa 4 khách</li>
-                                    <li class="item_amine_bedrooms"><i class="iconroom-bed"></i>2 phòng ngủ</li>
-                                    <li class="item_amine_bedrooms"><i class="iconroom-bed"></i>2 giường</li>
-                                </ul>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>Phòng tắm</th>
-                            <td>
-                                <ul>
-                                    <li class="item_amine_bathrooms"><i class="fs-16 text-gray iconroom-shower"></i> 1
-                                        phòng tắm
-                                    </li>
-                                </ul>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>Tiện ích bếp</th>
-                            <td>
-                                <ul>
-                                    <li class="item_amine_bedrooms"><i
-                                            class="pull-left fs-16 text-gray lst-icon-stove-electric"></i> Bếp điện
-                                    </li>
-                                    <li class="item_amine_bedrooms"><i
-                                            class="pull-left fs-16 text-gray lst-icon-microwave"></i> Lò vi sóng
-                                    </li>
-                                    <li class="item_amine_bedrooms"><i
-                                            class="pull-left fs-16 text-gray lst-icon-refrigerator"></i> Tủ lạnh
-                                    </li>
-                                </ul>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>Tiện ích</th>
-                            <td>
-                                <ul>
-                                    <li class="item_amine_bedrooms"><i
-                                            class="pull-left fs-16 text-gray lst-icon-hotel-wifi"></i> Wifi
-                                    </li>
-                                    <li class="item_amine_bedrooms"><i
-                                            class="pull-left fs-16 text-gray lst-icon-tv"></i> TV
-                                    </li>
-                                    <li class="item_amine_bedrooms"><i
-                                            class="pull-left fs-16 text-gray lst-icon-air-conditioning"></i> Điều hoà
-                                    </li>
-                                    <li class="item_amine_bedrooms"><i
-                                            class="pull-left fs-16 text-gray lst-icon-shampoo"></i> Dầu gội, dầu xả
-                                    </li>
-                                    <li class="item_amine_bedrooms"><i
-                                            class="pull-left fs-16 text-gray lst-icon-toilet-paper-1"></i> Giấy vệ sinh
-                                    </li>
-                                    <li class="item_amine_bedrooms"><i
-                                            class="pull-left fs-16 text-gray lst-icon-tissues"></i> Giấy ăn
-                                    </li>
-                                    <li class="item_amine_bedrooms"><i
-                                            class="pull-left fs-16 text-gray lst-icon-complimentary-bottled-water"></i>
-                                        Nước khoáng
-                                    </li>
-                                    <li class="item_amine_bedrooms"><i
-                                            class="pull-left fs-16 text-gray lst-icon-towels"></i> Khăn tắm
-                                    </li>
-                                    <li class="item_amine_bedrooms"><i
-                                            class="pull-left fs-16 text-gray lst-icon-uniF12D"></i> Kem đánh răng
-                                    </li>
-                                    <li class="item_amine_bedrooms"><i
-                                            class="pull-left fs-16 text-gray lst-icon-uniF126"></i> Xà phòng tắm
-                                    </li>
-                                    <li class="item_amine_bedrooms"><i
-                                            class="pull-left fs-16 text-gray iconroom-check-circle"></i> Máy sấy
-                                    </li>
-                                </ul>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+                <div class="tlt pb10"><h4>Tiện nghi</h4></div>
+                {{house.description}}
             </div>
-
-
+            <h4>Ảnh</h4>
+            <p>
+                <img src="http://127.0.0.1:8000/storage/{{house.image}}">
+            </p>
+            <h4>Địa chỉ</h4>
+            <p>
+                {{house.address}}
+            </p>
+            <h4>Trạng thái</h4>
+            <p>
+                {{house.status}}
+            </p>
+            <h4>Giá</h4>
+            <p>
+                {{house.price + 'VND'}}
+            </p>
         </div>
 
 
