--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -12,7 +12,7 @@
 <div class="container-fluid fixed-top">
     <nav class="navbar navbar-light" style="background-color: #ffffff; height: 115px">
         <figure id="logo" class="navbar-brand" style="margin-left: 150px">
-            <a href="#">
+            <a [routerLink]="['/house']">
                 <img src="https://coinvn247.com/wp-content/uploads/2019/01/codegym.png" alt="HomeCodeGym"
                      class="img-responsive" width="160px" height="100px"></a>
         </figure>
