--- a/src/app/booking-home3/booking-home3.component.html
+++ b/src/app/booking-home3/booking-home3.component.html
@@ -1,3 +1,317 @@
-<p>
-  booking-home3 works!
-</p>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Booking-home</title>
+</head>
+<body>
+<a href="#" style="margin-left: 200px">
+  <img src="https://coinvn247.com/wp-content/uploads/2019/01/codegym.png" alt="HomeCodeGym"
+       class="img-responsive" width="160px" height="100px">
+</a>
+<br>
+
+
+<div class="container" style="margin-top: 0px">
+  <div class="row">
+    <div class="col-8" style="margin-bottom: 25px; margin-top: 18px; color: black">
+
+      <div class="card border-danger col" style="margin-bottom: 20px; margin-top: 20px">
+        <div class="card-header" style="color: red">Thông tin liên hệ/Thông tin khách</div>
+        <div class="card-body">
+          <form>
+            <div class="form-group">
+              <label for="inputAddress">Tên người liên hệ </label>
+              <input type="text" class="form-control" id="inputAddress" placeholder="Name ">
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label>Số điện thoại </label>
+                <input type="text" class="form-control" placeholder="+84">
+              </div>
+              <div class="form-group col-md-6">
+                <label>Email</label>
+                <input type="email" class="form-control" placeholder="Email">
+              </div>
+
+            </div>
+
+            <div class="form-group">
+              <label for="inputAddress2">Địa chỉ </label>
+              <input type="text" class="form-control" id="inputAddress2" placeholder="Thôn, xã, huyện, tỉnh ">
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="inputCity">Thành phố</label>
+                <input type="text" class="form-control" id="inputCity">
+              </div>
+
+              <div class="form-group col-md-6">
+                <label for="inputZip"> Mã Zip</label>
+                <input type="text" class="form-control" id="inputZip">
+              </div>
+            </div>
+            <h6> Mục đích chuyến đi? </h6>
+            <br>
+            <div class="custom-control custom-radio">
+              <input type="radio" class="custom-control-input" id="customControlValidation" name="radio-stacked" required>
+              <label class="custom-control-label" for="customControlValidation">Tổ chức tiệc  </label>
+            </div>
+            <div class="custom-control custom-radio">
+              <input type="radio" class="custom-control-input" id="customControlValidation1" name="radio-stacked" required>
+              <label class="custom-control-label" for="customControlValidation1">Dành cho gia đình  </label>
+            </div>
+            <div class="custom-control custom-radio">
+              <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required>
+              <label class="custom-control-label" for="customControlValidation2">Công tác </label>
+            </div>
+            <div class="custom-control custom-radio mb-3">
+              <input type="radio" class="custom-control-input" id="customControlValidation3" name="radio-stacked" required>
+              <label class="custom-control-label" for="customControlValidation3">Khác </label>
+            </div>
+
+            <div class="form-group">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                  Tôi đặt cho người khác
+                </label>
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Tiếp tục </button>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!--table gia-->
+    <div class="col-4" style="margin-bottom: 35px; margin-top: 35px">
+      <div class="card">
+        <div class="card-header" style="color: red">
+          Thông tin đặt phòng
+        </div>
+        <div class="container">
+          <div class="card" style="margin-bottom: 10px">
+
+            <div class="row" style="margin-top: 15px">
+              <div class="col-md-6">
+                <img src="https://cdn.luxstay.com/rooms/16943/thumbnail/room_16943_1_1542784458.jpg?w=250&fit=crop&v=147661"
+                     class="card-img-top" alt="abc">
+              </div>
+
+              <div class="col-md-6">
+                <div class="booking-room-informations clearfix">
+                  <div class="font-weight-bold font-size-8">TRULY Antique Hanoi homestay</div>
+                  <h6>Chung cư</h6>
+                  <p>Trần Hưng Đạo, Hoàn Kiếm, Hanoi, Vietnam</p>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+          <tbody>
+          <tr class="font-13">
+            <td><p class="">Số đêm nghỉ</p></td>
+            <td>
+              <p class="color-333333 text-right">
+                <span class="lst-no-internal">1</span>
+                &nbsp;đêm
+              </p>
+            </td>
+          </tr>
+          <tr class="font-13">
+            <td><p>Ngày đến</p></td>
+            <td><p class="color-333333 text-right" id="time-checkin">15-01-2019</p>
+            </td>
+          </tr>
+          <tr class="font-13">
+            <td><p>Ngày đi</p></td>
+            <td><p class="color-333333 text-right" id="time-checkout">16-01-2019</p></td>
+          </tr>
+          <tr class="font-13">
+            <td><p>Số khách</p></td>
+            <td><p class="color-333333 text-right">3</p></td>
+          </tr>
+          <tr class="tr-border">
+            <td><p class="font-13">Chính sách hủy</p></td>
+            <td><p class="text-right">
+              <a target="_blank" href="#!">Flexible</a>
+            </p></td>
+          </tr>
+          <tr>
+            <td>
+              <p class=" font-13">
+                <span class="lst-no-internal">900,000 ₫ x 1</span>
+                &nbsp;đêm
+              </p>
+            </td>
+            <td class="text-right"><p></p>
+
+              <p class=" font-13">
+                <span class="lst-no-internal">900,000 ₫</span>
+              </p>
+            </td>
+          </tr>
+
+          <tr>
+            <td><p class="font-13">Phí dọn dẹp</p></td>
+            <td class="text-right"><p class=" font-13">
+              <span class="lst-no-internal">250,000 ₫</span>
+            </p>
+            </td>
+          </tr>
+
+
+          </tbody>
+          <li class="list-group-item" style="margin-bottom: 10px; color: red">
+            <td>
+              <br>
+              <p><strong>Tổng giá tiền</strong></p></td>
+            <td class="text-right">
+              <br>
+              <p><strong>
+                <span class="lst-no-internal">1,150,000 ₫</span>
+              </strong>
+              </p></td>
+          </li>
+
+
+        </div>
+
+      </div>
+    </div>
+    <!--table gia-->
+
+  </div>
+
+</div>
+
+
+<!-- Footer -->
+
+<div>
+  <footer class="page-footer font-small unique-color-dark">
+
+    <div style="background-color: #6351ce;">
+      <div class="container">
+
+        <div class="row d-flex align-items-center">
+          <!-- Grid column -->
+          <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+            <h5 class="mb-0">Theo dõi chúng tôi !</h5>
+          </div>
+          <!-- Grid row-->
+          <div class="d-flex flex-row-reverse" style="margin-top: 5px">
+            <!-- Grid column -->
+            <ul class="footerNavLinks">
+              <a href="#!"><img
+                      src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-facebook.png"
+                      alt="Facebook"></a>
+              <a href="#!"><img
+                      src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-youtube.png"
+                      alt="Youtube"></a>
+              <a href="#!"><img
+                      src="https://tiendientu.org/wp-content/themes/tdt/assets/images/icon-telegram.png"
+                      alt="Telegram"></a>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- Grid column -->
+    </div>
+
+
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left mt-5">
+
+
+      <!-- Grid row -->
+      <div class="row mt-3">
+
+        <div class="section col-md-4">
+          <a class="td-header-logo td-sticky-disable" href="https://coinvn247.com/">
+            <img class="td-retina-data"
+
+                 src="https://coinvn247.com/wp-content/uploads/2019/01/homecodegum.png" height="150px"
+                 width="265px" alt="">
+          </a>
+        </div>
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+
+          <!-- Links -->
+          <h6 class="text-uppercase font-weight-bold">Hỗ trợ</h6>
+          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>
+            <a href="#!">Câu hỏi thường </a>
+          </p>
+          <p>
+            <a href="#!">Chính sách hủy</a>
+          </p>
+          <p>
+            <a href="#!">Hướng dẫn đặt phòng</a>
+          </p>
+
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+
+          <!-- Links -->
+          <h6 class="text-uppercase font-weight-bold">Cẩm nang du lịch </h6>
+          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>
+            <a href="#!">Đà Lạt </a>
+          </p>
+          <p>
+            <a href="#!">Đà Nẵng </a>
+          </p>
+          <p>
+            <a href="#!">SaPa </a>
+          </p>
+
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+
+          <!-- Links -->
+          <h6 class="text-uppercase font-weight-bold">Contact</h6>
+          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>
+            <i class="fas fa-home mr-3"></i> CodeGym, My Dinh, Ha Noi </p>
+          <p>
+            <i class="fas fa-envelope mr-3"></i> codegym@gmail.com</p>
+          <p>
+            <i class="fas fa-phone mr-3"></i> + 08 234 567 88</p>
+          <p>
+            <i class="fas fa-print mr-3"></i> + 08 234 567 89</p>
+
+        </div>
+
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row -->
+
+    </div>
+    <!-- Footer Links -->
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2019 Copyright:
+      <a href="#!">Bản quyền thuộc về Team CC </a>
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+  <!-- Footer -->
+</div>
+
+</body>
+</html>
