--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <!--<app-customer></app-customer>-->
 
 <!--<app-view-detail></app-view-detail>-->
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
+<app-search-home></app-search-home>
