--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -112,7 +112,7 @@
             </div>
             <h4>Ảnh</h4>
             <p>
-                <img src="http://127.0.0.1:8000/storage/{{house.image}}">
+                <img src="http://127.0.0.1:8000/storage/{{house.image}}" height="400px" width="700px">
             </p>
             <h4>Địa chỉ</h4>
             <p>
@@ -278,7 +278,7 @@
                     <h6 class="text-uppercase font-weight-bold">Contact</h6>
                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p>
-                        <i class="fas fa-home mr-3"></i> CodeGym, My Dinh, Ha Noi </p>
+                        <i class="fas fa-home mr-3"></i> CodeGym, Mỹ Đình, Hà Nội</p>
                     <p>
                         <i class="fas fa-envelope mr-3"></i> codegym@gmail.com</p>
                     <p>
