add format price

--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -401,7 +401,7 @@
                     <img style="width: 100%" alt="Điểm đến hàng đầu" class=" lazyloaded"
                          src="http://127.0.0.1:8000/storage/{{house.image}}" height="150">
                     <a [routerLink]="['/house', house.id]"><h3>{{house.title}}</h3></a>
-                    <div class="price">{{house.price + ' VND'}}</div>
+                    <div class="price">{{house.price.toLocaleString() + ' VND'}}</div>
 
                 </div>
             </div>
