--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -124,7 +124,7 @@
             </p>
             <h4>Giá</h4>
             <p>
-                {{house.price + 'VND'}}
+                {{house.price.toLocaleString() + 'VND'}}
             </p>
         </div>
 
