--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -183,30 +183,30 @@
                             <div class="row">
                                 <div class="col-4">
 
-                                    <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
-                                                      src="https://cdn.luxstay.com/home/location/small/location_8_1546584483.png">
+                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
+                                                      src="http://tuvandulich.vn/data/News/image2.jpg">
                                         <div class="DestinationsTxt">
-                                            <h3>Hà Nội </h3>
+                                            <h3>Thanh Hóa </h3>
                                         </div>
                                     </a>
 
                                 </div>
                                 <div class="col-4">
 
-                                    <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
-                                                      src="https://cdn.luxstay.com/home/location/small/location_5_1546584455.png">
+                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
+                                                      src="https://huehomestay.net/wp-content/uploads/2018/02/cover-min.png">
                                         <div class="DestinationsTxt">
-                                            <h3> Đà Nẵng </h3>
+                                            <h3>Huế</h3>
                                         </div>
                                     </a>
 
                                 </div>
                                 <div class="col-4">
 
-                                    <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
-                                                      src="https://cdn.luxstay.com/home/location/small/location_2_1546584433.png">
+                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
+                                                      src="https://image-us.24h.com.vn/upload/3-2018/images/2018-07-17/Kham-pha-4-homestay-dep-quen-loi-ve-tai-Sa-Pa-1-1531819672-672-width650height340.jpg">
                                         <div class="DestinationsTxt">
-                                            <h3>Nha Trang </h3>
+                                            <h3>Sa Pa </h3>
                                         </div>
                                     </a>
 
@@ -218,30 +218,30 @@
                             <div class="row">
                                 <div class="col-4">
 
-                                    <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
-                                                      src="https://cdn.luxstay.com/home/location/small/location_1_1546584395.png">
+                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
+                                                      src="https://www.vntrip.vn/cam-nang/wp-content/uploads/2017/03/Long-Cung-la-mot-resort-nam-gan-canh-bien.jpeg">
                                         <div class="DestinationsTxt">
-                                            <h3>Đà lạt </h3>
+                                            <h3>Vũng Tàu</h3>
                                         </div>
                                     </a>
 
                                 </div>
                                 <div class="col-4">
 
-                                    <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
-                                                      src="https://cdn.luxstay.com/home/location/small/location_5_1546584455.png">
+                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
+                                                      src="http://tintuc.khanhhoa79.com/upload/media/entries/2017-05/04/11124-0-d4be24e044727c4212f46fec4df11f17.jpg">
                                         <div class="DestinationsTxt">
-                                            <h3> Đà Nẵng </h3>
+                                            <h3>Khánh Hòa</h3>
                                         </div>
                                     </a>
 
                                 </div>
                                 <div class="col-4">
 
-                                    <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
-                                                      src="https://cdn.luxstay.com/home/location/small/location_3_1546584441.png">
+                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
+                                                      src="https://www.chudu24.com/wp-content/uploads/2018/03/3-42.jpg">
                                         <div class="DestinationsTxt">
-                                            <h3>SaPa </h3>
+                                            <h3>Nha Trang</h3>
                                         </div>
                                     </a>
 
@@ -252,30 +252,30 @@
                             <div class="row">
                                 <div class="col-4">
 
-                                    <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
-                                                      src="https://cdn.luxstay.com/home/location/small/location_2_1546584433.png">
+                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
+                                                      src="http://media.we25.vn/images/homstay-thung-ruou2.jpg">
                                         <div class="DestinationsTxt">
-                                            <h3>Vũng Tàu </h3>
+                                            <h3>Đà Lạt</h3>
                                         </div>
                                     </a>
 
                                 </div>
                                 <div class="col-4">
 
-                                    <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
-                                                      src="https://cdn.luxstay.com/home/location/small/location_5_1546584455.png">
+                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
+                                                      src="http://pystravel.vn/wp-content/uploads/2017/02/nen-di-dau-choi-30-4-pys-travel0131.jpg">
                                         <div class="DestinationsTxt">
-                                            <h3> Đà Nẵng </h3>
+                                            <h3> Hải Phòng </h3>
                                         </div>
                                     </a>
 
                                 </div>
                                 <div class="col-4">
 
-                                    <a href="#!"><img style="width: 100%" alt="Điểm đến hàng đầu"
-                                                      src="https://cdn.luxstay.com/home/location/small/location_2_1546584433.png">
+                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
+                                                      src="http://mrhanhphuc.com/uploaded/uploads/2018/03/chup-anh-cuoi-o-nha-tho-lon-ha-noi.jpg">
                                         <div class="DestinationsTxt">
-                                            <h3>Nha Trang </h3>
+                                            <h3>Hà Nội</h3>
                                         </div>
                                     </a>
 
@@ -301,91 +301,6 @@
     </div>
 </div>
 <!--end row-->
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-1">
-            <!--#-->
-        </div>
-        <div class="col-10">
-            <h4 class="text-uppercase font-weight-bold"
-                style="margin-top: 30px; margin-bottom: 30px">
-                Lựa chọn tốt nhất </h4>
-            <div class="row">
-                <div class="col-3">
-
-                    <a href="#!"><img style="width: 100%" height="250px" alt="Điểm đến hàng đầu"
-                                      src="http://tuvandulich.vn/data/News/image2.jpg">
-                        <div class="DestinationsTxt">
-                            <h3>Thanh Hóa </h3>
-                        </div>
-                    </a>
-                    <a href="#!"><img style="width: 100%" height="250px" alt="Điểm đến hàng đầu"
-                                      src="https://huehomestay.net/wp-content/uploads/2018/02/cover-min.png">
-                        <div class="DestinationsTxt">
-                            <h3>Huế </h3>
-                        </div>
-                    </a>
-
-                </div>
-                <div class="col-3">
-
-                    <a href="#!"><img style="width: 100%" height="250px" alt="Điểm đến hàng đầu"
-                                      src="https://image-us.24h.com.vn/upload/3-2018/images/2018-07-17/Kham-pha-4-homestay-dep-quen-loi-ve-tai-Sa-Pa-1-1531819672-672-width650height340.jpg">
-                        <div class="DestinationsTxt">
-                            <h3>SaPa </h3>
-                        </div>
-                    </a>
-                    <a href="#!"><img style="width: 100%" height="250px" alt="Điểm đến hàng đầu"
-                                      src="https://www.vntrip.vn/cam-nang/wp-content/uploads/2017/03/Long-Cung-la-mot-resort-nam-gan-canh-bien.jpeg">
-                        <div class="DestinationsTxt">
-                            <h3>Vũng Tàu </h3>
-                        </div>
-                    </a>
-
-                </div>
-                <div class="col-3">
-
-                    <a href="#!"><img style="width: 100%" height="250px" alt="Điểm đến hàng đầu"
-                                      src="http://tintuc.khanhhoa79.com/upload/media/entries/2017-05/04/11124-0-d4be24e044727c4212f46fec4df11f17.jpg">
-                        <div class="DestinationsTxt">
-                            <h3>Khánh Hòa </h3>
-                        </div>
-                    </a>
-                    <a href="#!"><img style="width: 100%" height="250px" alt="Điểm đến hàng đầu"
-                                      src="https://www.chudu24.com/wp-content/uploads/2018/03/3-42.jpg">
-                        <div class="DestinationsTxt">
-                            <h3>Nha Trang </h3>
-                        </div>
-                    </a>
-
-                </div>
-                <div class="col-3">
-
-                    <a href="#!"><img style="width: 100%" height="250px" alt="Điểm đến hàng đầu"
-                                      src="http://media.we25.vn/images/homstay-thung-ruou2.jpg">
-                        <div class="DestinationsTxt">
-                            <h3>Đà Lạt </h3>
-                        </div>
-                    </a>
-                    <a href="#!"><img style="width: 100%" height="250px" alt="Điểm đến hàng đầu"
-                                      src="http://pystravel.vn/wp-content/uploads/2017/02/nen-di-dau-choi-30-4-pys-travel0131.jpg">
-                        <div class="DestinationsTxt">
-                            <h3>Hải Phòng</h3>
-                        </div>
-                    </a>
-
-                </div>
-
-            </div>
-
-
-            <div class="col-1">
-                <!--#-->
-            </div>
-        </div>
-    </div>
-</div>
-<!--end row2-->
 
 <div class="container-fluid">
     <div class="row">
