--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -282,14 +282,41 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <!--Q/cao-->
-                    <div class="container" style="margin-top: 5px">
-                        <div>
-                            <img src="https://cdn.luxstay.com/home/event/event_1_1547106326.jpg" style="width: 1095px">
+                        <div class="container" style="margin-top: 20px; margin-bottom: 15px">
+                            <div class="row">
+                                <div class="col-4">
+
+                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
+                                                      src="https://www.vntrip.vn/cam-nang/wp-content/uploads/2017/07/cua-lo.jpg">
+                                        <div class="DestinationsTxt">
+                                            <h3>Nghệ An</h3>
+                                        </div>
+                                    </a>
+
+                                </div>
+                                <div class="col-4">
+
+                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
+                                                      src="https://www.ahalong.com/uploads/kinh-nghiem-chinh-phuc-nui-bai-tho-cd75c430.jpg">
+                                        <div class="DestinationsTxt">
+                                            <h3>Quảng Ninh</h3>
+                                        </div>
+                                    </a>
+
+                                </div>
+                                <div class="col-4">
+
+                                    <a href="#!"><img style="width: 100%" height="170px" alt="Điểm đến hàng đầu"
+                                                      src="https://ninhbinhlegendhotel.com/wp-content/uploads/2016/10/van-long-ivivu-1024x482.jpg">
+                                        <div class="DestinationsTxt">
+                                            <h3>Ninh Bình</h3>
+                                        </div>
+                                    </a>
+
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <!--end Q/cao-->
                 </div>
                 <!--row2-->
 
