--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -96,7 +96,7 @@
 
 </div>
 <!--slider-img-->
-<div class="container">
+<div class="container" style="margin-top: 35px; margin-bottom: 35px" >
     <div class="row">
         <div class="col-8">
 
