--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home</title>
-
 </head>
 <body>
 
@@ -399,7 +398,7 @@
             <div class="row">
                 <div class="col-3" *ngFor="let house of houses">
                     <div *ngIf="house.status === 'Chưa cho thuê'">
-                        <img style="width: 100%" alt="Điểm đến hàng đầu" class=" lazyloaded"
+                        <img style="width: 100%" alt="Điểm đến hàng đầu" class=" lazyloaded shake"
                              src="http://127.0.0.1:8000/storage/{{house.image[0]}}" height="150">
                         <a [routerLink]="['/house', house.id]"><h3>{{house.title}}</h3></a>
                         <div class="price">{{house.price.toLocaleString() + ' VND'}}</div>
