--- a/src/app/customer/customer.component.css
+++ b/src/app/customer/customer.component.css
@@ -1,4 +1,3 @@
-
 .shake:hover {
     animation: shake 0.5s;
     animation-iteration-count: unset;
@@ -16,4 +15,13 @@
     /*80% { transform: translate(-1px, -1px) rotate(1deg); }*/
     /*90% { transform: translate(1px, 2px) rotate(0deg); }*/
     /*100% { transform: translate(1px, -2px) rotate(-1deg); }*/
+}
+
+
+.status {
+    width: 130px;
+    height: 25px;
+    -moz-border-radius: 80px / 40px;
+    -webkit-border-radius: 120px / 40px;
+    border-radius: 90px / 90px;
 }
