--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -10,17 +10,13 @@
 <body>
 <!--nav-bar-->
 <div class="container-fluid fixed-top">
-    <nav class="navbar navbar-light" style="background-color: #ffffff; height: 115px">
+    <nav class="navbar navbar-light" style="background-color: gainsboro; height: 115px">
         <figure id="logo" class="navbar-brand" style="margin-left: 150px">
             <a [routerLink]="['/house']">
                 <img src="https://coinvn247.com/wp-content/uploads/2019/01/codegym.png" alt="HomeCodeGym"
                      class="img-responsive" width="160px" height="100px"></a>
         </figure>
         <ul class="nav nav-pills">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle btn btn-outline-success" data-toggle="dropdown" href="#"
-                   role="button" aria-haspopup="true" aria-expanded="false">Dành cho chủ nhà</a>
-            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
                    aria-expanded="false">Ngôn ngữ</a>
@@ -40,93 +36,34 @@
         </ul>
     </nav>
 </div>
-<!--nav-bar-->
-<!--slider-img-->
-<div id="details" class="container-fluid">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100"
-                     src="https://cdn.luxstay.com/rooms/16943/large/room_16943_3_1542784577.jpg"
-                     alt="First slide" style="height: 800px; width: 300px">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>ABC</h5>
-                    <p>cde</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="https://cdn.luxstay.com/rooms/15176/large/1537408618_IMG_7906.jpg"
-                     alt="Second slide" style="height: 800px; width: 300px">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>ABC</h5>
-                    <p>cde</p>
-                </div>
 
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100"
-                     src="https://cdn.luxstay.com/rooms/14436/large/1534908497_image_6483441%20(11).JPG"
-                     alt="Third slide" style="height: 800px; width: 300px">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>ABC</h5>
-                    <p>cde</p>
-                </div>
-            </div>
-
-
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            <button type="button" class="btn btn-primary" style="margin-bottom: -700px">Xem Album</button>
-
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-
-        </a>
-
-    </div>
-
-</div>
-<!--slider-img-->
-<div class="container" style="margin-top: 35px; margin-bottom: 35px" >
+<div class="container" style="margin-top: 150px; margin-bottom: 35px">
     <div class="row">
         <div class="col-8">
 
             <h3 style="text-align: center; font-size: 38px">{{house.title}}</h3>
-
-            <h4> Giới thiệu chỗ ở </h4>
+            <h4>Giá</h4>
             <p>
-                {{house.content}}
-            </p>
-            <div class="interest-about" id="section04">
-                <div class="tlt pb10"><h4>Tiện nghi</h4></div>
-                {{house.description}}
-            </div>
-            <h4>Ảnh</h4>
-            <p>
-                <img src="http://127.0.0.1:8000/storage/{{house.image}}" height="400px" width="700px">
-            </p>
-            <h4>Địa chỉ</h4>
-            <p>
-                {{house.address}}
+                {{house.price.toLocaleString() + 'VND'}}
             </p>
             <h4>Trạng thái</h4>
             <p>
                 {{house.status}}
             </p>
-            <h4>Giá</h4>
+            <h4>Địa chỉ</h4>
             <p>
-                {{house.price.toLocaleString() + 'VND'}}
+                {{house.address}}
             </p>
+            <h4>Ảnh</h4>
+            <p>
+                <img src="http://127.0.0.1:8000/storage/{{house.image}}" height="400px" width="700px">
+            </p>
+            <div class="box-Highlights">
+                <div class="tlt"><h4>Điểm nổi bật của chỗ ở</h4></div>
+                <div class="box-txt"><p>{{house.description}}</p></div>
+            </div>
         </div>
+
 
 
         <div class="col-4" style="margin-top: 20px; margin-bottom: 20px">
